# Bikera

./: .gitignore  .~lock.WhitePaper_FINMA_swiss_compliance.odt#  .~lock.WhitePaper_MiCA_compliantish.odt#  BikeraToken.sol  BikeraToken2-1.sol  BikeraToken2-2.sol  IMERA-TOKEN.rs  README.md  WhitePaper_FINMA_swiss_compliance.odt  WhitePaper_MiCA_compliantish.odt  package-lock.json  package.json  packageOLD.json
Arduino firmware prototype/: MKRWAN_PAYLOAD_CUSTOM_BIKERA.ino  MKRWAN_PAYLOAD_CUSTOM_BIKERA_MKRWAN1310.ino  waveshare_RXD_TXD_lorawan.ino
Backend/: Building iMERA app Audit and proposal.docx  DATA-VALIDATOR.rs  (+2 more)
Backend/Canisters/: Cargo.toml  Ext-dfx.json  dfx.json  lib.rs
Backend/Canisters/IMERA-BRIDGE/: Cargo.toml
Backend/Canisters/IMERA-BRIDGE/src/: lib.rs
Backend/Canisters/MILEAGE-Token/: README.md
Backend/Canisters/OLD/IMERA-BRIDGE/: README.md
Backend/Canisters/OLD/consensus/src/: lib.rs
Backend/Canisters/OLD/rewards/src/: lib.rs
Backend/Canisters/OLD/src/consensus/: consensus.did
Backend/Canisters/OLD/src/validator/: validator.did
Backend/Canisters/OLD/validator/: validator.did
Backend/Canisters/bikera_token/: Cargo.toml  bikera_token.did
Backend/Canisters/bikera_token/src/: lib.rs  libOLD.rs
Backend/Canisters/consensus/: Cargo.toml  consensus.did
Backend/Canisters/consensus/src/: lib.rs
Backend/Canisters/rewards/: Cargo.toml  rewards.did
Backend/Canisters/rewards/src/: lib.rs  lib.rs~  libOLD.rs
Backend/Canisters/src/rewards/: rewards.did
Backend/Canisters/validator/: Cargo.toml
Backend/Canisters/validator/src/: lib.rs
(+42 files in other folders)
