[workspace]
members = [
    "validator",
    "consensus", 
    "rewards",
    "bikera_token"
]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
serde_bytes = "0.11"
