[package]
name = "bikera_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true, features = ["value"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_bytes = { workspace = true }

